Fix precedence for link-five getting stuck, add padding

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -74,6 +74,7 @@ blockquote {
   color: #000;
   text-decoration: none;
   transition: background-size 0.2s;
+  @apply px-1;
 }
 
 a:hover {
@@ -113,7 +114,7 @@ a:hover {
 /* PERMA */
 
 .permalink {
-  @apply pb-4;
+  @apply pb-2;
 }
 
 .permalink-title {
@@ -122,7 +123,7 @@ a:hover {
 
 .permalink > a,
 .permalink-title > a {
-  @apply pr-8;
+  @apply pr-6;
 }
 
 .permalink-author {
